# bazel-tutorial

./: .bazelrc  .gitignore  MODULE.bazel  README.md
.github/workflows/: cache-warm.yml  ci.yml  cross-compile.yml
stage1/: BUILD  hello.cc
stage2/: BUILD  main.cc
stage2/math/: BUILD  math_utils.cc  math_utils.h
stage3/: BUILD  main.cc
stage3/greeter/: BUILD  greeter.cc  greeter.h
stage3/strings/: BUILD  strings.cc  strings.h
stage4/math/: BUILD  math_utils.cc  math_utils.h  math_utils_test.cc
stage5/: BUILD  main.cc
stage5/platform_info/: BUILD  platform_info.h  platform_info_linux.cc  platform_info_macos.cc  platform_info_windows.cc
stage6/: BUILD  hello.cc
stage6/toolchains/: BUILD  cc_toolchain_config.bzl
stage7/: .bazelrc.disk_cache  .bazelrc.remote  docker-compose.yml
